# kdcube-ai-app

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  Makefile  README-suggestion.md  README.md  SECURITY.md  release.yaml
app/ai-app/services/kdcube-ai-app/: requirements-aws.txt  requirements-chat-ingress.txt  requirements-chat-processor.txt  requirements-chat.txt  requirements-kb.txt  requirements-metric-service.txt  requirements-orchestrator.txt  setup.cfg
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/apps/chat/: emitters.py  processor.py  reg.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/apps/chat/api/: .env.ingress.sample  idp_users.json  resolvers.py  web_app.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/apps/chat/default_app/: agentic_app.py  inventory.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/apps/metrics/: .env.metrics.example  export_metrics.py  web_app.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/apps/middleware/: accounting.py  auth.py  economics_role.py  gateway.py  gateway_policy.py  token_extract.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/apps/utils/: cors.py  logging_config.py  sql_dt_utils.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/auth/: AuthManager.py  OAuthManager.py  auth-README.md  sessions.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/auth/implementations/: cognito.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/: namespaces.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/accounting/: __init__.py  aggregator.py  calculator.py  envelope.py  turn_cache.py  usage.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/availability/: health_and_heartbeat.py  shutdown_diagnostics.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/aws/: task_protection.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/channel/: email.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/config/: __init__.py  external_runtime.py  platform_env.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/embedding/: faiss_manager.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/gateway/: backpressure.py  circuit_breaker.py  config.py  definitions.py  gateway.py  rate_limiter.py  safe_preflight.py  thorttling.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/llm/: batching.py  streaming.py  util.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/metrics/: pool_stats.py  system_monitoring.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/orchestration/: orchestration.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/plugin/: README.md  agentic_loader.py  bundle-ux-README.md  bundle_registry.py  bundle_store.py  git_bundle.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/redis/: client.py  i_redis.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/rendering/: link_preview.py  shared_browser.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/secrets/: manager.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/service_hub/: cache-README.md  cache.py  errors.py  gemini.py  inventory.py  message_utils.py  multimodality.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/tools/: gateway_config_dump.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/ops/cli/: installer.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/readme/kb/: compose-persistence.md
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/storage/: storage.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/tools/: content_type.py  datasource.py  extract.py  scrap_utils.py
app/ai-app/services/kdcube-ai-app/kdcube_apps_cli/: README.md  pyproject.toml
app/ai-app/services/kdcube-ai-app/kdcube_apps_cli/src/kdcube_apps_cli/: banner.py  cli.py
app/ai-app/services/kdcube-ai-app/kdcube_cli/: LICENSE  README.md  pyproject.toml
app/ai-app/services/kdcube-ai-app/kdcube_cli/src/kdcube_cli/: banner.py  cli.py  installer.py
libs/kdcube-comm/: README.md  pyproject.toml
libs/kdcube-comm/examples/streamlit/streamlit_ws_duplex/: .env  README.md
libs/kdcube-comm/examples/streamlit/streamlit_ws_duplex/client/: app.py  requirements.txt
libs/kdcube-comm/examples/streamlit/streamlit_ws_duplex/server/: main.py  requirements.txt
libs/kdcube-comm/src/kdcube_comm/streamlit/: README.md
libs/kdcube-comm/src/kdcube_comm/streamlit/websocket/: README.md  dedicated_ws_connection.py  notifier.py  shared_ws_connection.py
(+3355 files in other folders)
