# SPDX-License-Identifier: MIT
# Copyright (c) 2025 Elena Viter

[metadata]
name = kdcube-ai-app
version = 0.1.0
description = KDCube AI App
long_description = file: README.md
long_description_content_type = text/markdown
author = Elena Viter
author_email = lena@nestlogic.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    python-dotenv
    openai
    psycopg[binary]
    rich

[options.extras_require]
# "pip install kdcube-ai-app[examples]"
# the extras dependencies will be installed. For example, notebooks need jupyter.
examples =
    jupyter
    notebook
    matplotlib
    pygments

chat =
    aiohttp==3.12.15
    fastapi==0.116.1
    langchain==1.2.0
    langchain-community==0.4.1
    langchain-openai==1.1.6
    langchain-core==1.2.6
    langgraph==1.0.5
    langmem==0.0.30
    dramatiq==1.18.0
    PyJWT[crypto]==2.10.1
    pydantic==2.11.7
    python-dotenv==1.1.1
    python-socketio==5.13.0
    redis==6.2.0
    requests==2.32.5
    uvicorn==0.35.0
    networkx
    neo4j
    asyncpg
    ddgs
    semantic-kernel
    reportlab
    aioboto3
    aiobotocore
    boto3
    bs4
    playwright
    markdown-it-py
    mdit-py-plugins
    linkify-it-py
    pygments
    jinja2
    Pillow
    lxml
    tiktoken
    pandas
    matplotlib
    python-magic
    pymupdf
    pdfminer.six
    pypdf
    python-docx
    python-pptx
    chardet
    orjson
    plotly
    kaleido
    graphviz
    seaborn
    diagrams
    pyvis
    python-dateutil
    xlsxwriter
    openpyxl
    httpx
    tinycss2
    python-pptx
    rich
    tenacity
    aiolimiter
    beautifulsoup4
    brotli
    markdownify
    trafilatura
    clamd
    aiofiles
    croniter
    python-multipart
    geopy
    folium
    stripe

tests =
    pytest
    coverage

[options.entry_points]
console_scripts =
    deploy-db = kdcube_ai_app.bin.cli:main
    kdcube-cli = kdcube_ai_app.ops.cli.installer:main
